--- a/HW0/HW0 Assignment.ipynb
+++ b/HW0/HW0 Assignment.ipynb
@@ -31,20 +31,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0': 0, '1': 1}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "character_frequency('google')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0': 0, '1': 1}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "character_frequency('This assignment is intended to ensure that you are able to edit and submit Jupyter Notebooks.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.6013, 0.9107, 0.7311],\n",
+      "        [0.4732, 0.0755, 0.4064],\n",
+      "        [0.4320, 0.5611, 0.4688],\n",
+      "        [0.9141, 0.6227, 0.0517],\n",
+      "        [0.8416, 0.1097, 0.1341]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "x = torch.rand(5, 3)\n",
+    "print(x)"
    ]
   },
   {
@@ -81,7 +147,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Google Collab Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](image.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
