--- a/HW0/HW0 Assignment.ipynb
+++ b/HW0/HW0 Assignment.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Madhur Lakshmanan UID: 121324702"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
